tests/bad_programs/type_errors/redecl_different_stms_different_types.nc
int main() {
    int n;
    double m, n;
    return 0;
}
